feat(java): full coverage pass with deeper guides and situation-named files